src/objects/HomeSearch_Grid_Column__mdt.object
<CustomObject>
    <fields>
        <fullName>Display_Object_Name__c</fullName>
        <label>Display Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HomeSearch Grid Column</label>
    <listViews>
        <fullName>Customer</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Customers</value>
        </filters>
        <label>Customer</label>
    </listViews>
    <listViews>
        <fullName>Customer_Invoices</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>startsWith</operation>
            <value>Customer Invoice</value>
        </filters>
        <label>Customer Invoices</label>
    </listViews>
    <listViews>
        <fullName>Customer_Order</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Customer Orders</value>
        </filters>
        <label>Customer Order</label>
    </listViews>
    <listViews>
        <fullName>Customer_Payments</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Customer Payments</value>
        </filters>
        <label>Customer Payments</label>
    </listViews>
    <listViews>
        <fullName>Customer_Unit</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Customer Unit</value>
        </filters>
        <label>Customer Unit</label>
    </listViews>
    <listViews>
        <fullName>Deal_Unit</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>contains</operation>
            <value>Deal Units</value>
        </filters>
        <label>Deal Unit</label>
    </listViews>
    <listViews>
        <fullName>Inventory_Unit</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Inventory Unit</value>
        </filters>
        <label>Inventory Unit</label>
    </listViews>
    <listViews>
        <fullName>Invoiced_Items</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>startsWith</operation>
            <value>Invoiced Ite</value>
        </filters>
        <label>Invoiced Items</label>
    </listViews>
    <listViews>
        <fullName>Parts</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>contains</operation>
            <value>Parts</value>
        </filters>
        <label>Parts</label>
    </listViews>
    <listViews>
        <fullName>Parts_Order</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Parts Order</value>
        </filters>
        <label>Parts Order</label>
    </listViews>
    <listViews>
        <fullName>Payroll_Hours</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Payroll Hours</value>
        </filters>
        <label>Payroll Hours</label>
    </listViews>
    <listViews>
        <fullName>Service_Job</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>contains</operation>
            <value>Job</value>
        </filters>
        <label>Service Job</label>
    </listViews>
    <listViews>
        <fullName>Tax_Detail</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>startsWith</operation>
            <value>Tax Detail</value>
        </filters>
        <label>Tax Detail</label>
    </listViews>
    <listViews>
        <fullName>Unit_Deal</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>contains</operation>
            <value>Unit Deal</value>
        </filters>
        <label>Unit Deal</label>
    </listViews>
    <listViews>
        <fullName>Vendor</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Display_Object_Name__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Inactive__c</columns>
        <columns>Is_Display__c</columns>
        <columns>Order_Number__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Display_Object_Name__c</field>
            <operation>equals</operation>
            <value>Vendors</value>
        </filters>
        <label>Vendor</label>
    </listViews>
    <pluralLabel>HomeSearch Grid Columns</pluralLabel>
</CustomObject>